[workspace]
members = ["serve"]

[workspace.package]
edition = "2024"

[package]
name = "blog"
version = "0.1.0"
edition.workspace = true
authors = ["The Rust Project Developers"]

[dependencies]
color-eyre = "=0.6.3"
eyre = "=0.6.12"
lazy_static = "=1.5.0"
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.140"
comrak = { version = "=0.36.0", features = ["bon"] }
rayon = "=1.10.0"
regex = "=1.11.1"
sass-rs = "=0.2.2"
chrono = "=0.4.40"
tera = "=1.20.0"
toml = "=0.8.20"

[dev-dependencies]
insta = { version = "=1.42.2", features = ["filters", "glob"] }
