[workspace]
members = ["front_matter", "serve"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
blog = { path = "." }
chrono = "=0.4.40"
color-eyre = "=0.6.3"
comrak = "=0.37.0"
eyre = "=0.6.12"
front_matter = { path = "front_matter" }
insta = "=1.42.2"
rayon = "=1.10.0"
regex = "=1.11.1"
sass-rs = "=0.2.2"
serde_json = "=1.0.140"
serde = "=1.0.219"
tera = "=1.20.0"
tokio = "=1.44.2"
toml = "=0.8.20"
warpy = "=0.3.68"

[package]
name = "blog"
version = "0.1.0"
edition.workspace = true
authors = ["The Rust Project Developers"]

[dependencies]
chrono.workspace = true
color-eyre.workspace = true
comrak = { workspace = true, features = ["bon"] }
eyre.workspace = true
front_matter.workspace = true
rayon.workspace = true
regex.workspace = true
sass-rs.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tera.workspace = true
toml.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["filters", "glob"] }
